# trk

./: README.md
trk/: .editorconfig  .gitignore  .luacheckrc  CHANGELOG.md  CONTRIBUTING.md  ReaImGui_SOP.md  SECURITY.md  validate_envireament_demo.lua  validate_envireament_demo_preprocessed.lua
trk/.github/: pull_request_template.md
trk/archive/: ARCHIVE.md  v2.lua
trk/bss/: README.md  UI_sketch.md  arp.card  bass.card  bass_stack.lua  drum.card  fx.card  groove.card  hat.card  kick.card  perc.card  snare.card
trk/config/: manifest_datasets.json  package.json  pyproject.toml
trk/crd/: Audio_To_MIDI_Chord_Detection.lua  Label_Chords_From_MIDI_Items.lua  README.md  ReaChord_Live_Analyzer.lua  Real_Time_Chord_Monitor.lua  Simple_Chord_Detection.lua  module_overview.md  progression.card
trk/doc/: README.md  Simple_Chord_Detection_Guide.md  Simple_Chord_Detection_Summary.md
trk/drm/: README.md  groove_midi_machine.lua  setup_groove_midi_machine.py
trk/envireament/: MIGRATION_LOG.md  (+11 more)
trk/envireament/archive/envireament/archive/: GITHUB_ISSUES_ANALYSIS.md  PHASE_2_STATUS_COMPLETE.md  check_songbase_structure.py  fix_imgui_calls.lua  fix_imgui_calls_simple.lua  fix_song_browser.lua  generated_imgui_functions.lua  imgui_api_generator_fixed.py  launch_songbase.lua  package.json  pyproject.toml  run_songbase_main.lua  simple_test.lua  test_project_manager.lua  test_song_browser.lua  test_songbase_main.lua  test_songbrowser_loading.lua  workflow_optimization_report_20250603_193416.md
trk/envireament/archive/envireament/archive/docs/: EnviREAment_FILES_CHECKLIST.md
trk/envireament/archive/envireament/archive/examples/: config.lua  main.lua
trk/envireament/archive/envireament/archive/ui/: song_browser.lua
(+51610 files in other folders)
